; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dpk_tx_pause.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/realtek/rtw88/extr_rtw8822c.c_rtw8822c_dpk_tx_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtw_dev = type { i32 }

@RF_PATH_A = common dso_local global i32 0, align 4
@RF_PATH_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtw_dev*)* @rtw8822c_dpk_tx_pause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtw8822c_dpk_tx_pause(%struct.rtw_dev* %0) #0 {
  %2 = alloca %struct.rtw_dev*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.rtw_dev* %0, %struct.rtw_dev** %2, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %7 = call i32 @rtw_write8(%struct.rtw_dev* %6, i32 1314, i32 255)
  %8 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %9 = call i32 @rtw_write32_mask(%struct.rtw_dev* %8, i32 7792, i32 15, i32 2)
  br label %10

10:                                               ; preds = %31, %1
  %11 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %12 = load i32, i32* @RF_PATH_A, align 4
  %13 = call i64 @rtw_read_rf(%struct.rtw_dev* %11, i32 %12, i32 0, i32 983040)
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %3, align 4
  %15 = load %struct.rtw_dev*, %struct.rtw_dev** %2, align 8
  %16 = load i32, i32* @RF_PATH_B, align 4
  %17 = call i64 @rtw_read_rf(%struct.rtw_dev* %15, i32 %16, i32 0, i32 983040)
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %4, align 4
  %19 = call i32 @udelay(i32 2)
  %20 = load i32, i32* %5, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %10
  %23 = load i32, i32* %3, align 4
  %24 = icmp eq i32 %23, 2
  br i1 %24, label %28, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %4, align 4
  %27 = icmp eq i32 %26, 2
  br i1 %27, label %28, label %31

28:                                               ; preds = %25, %22
  %29 = load i32, i32* %5, align 4
  %30 = icmp slt i32 %29, 2500
  br label %31

31:                                               ; preds = %28, %25
  %32 = phi i1 [ false, %25 ], [ %30, %28 ]
  br i1 %32, label %10, label %33

33:                                               ; preds = %31
  ret void
}

declare dso_local i32 @rtw_write8(%struct.rtw_dev*, i32, i32) #1

declare dso_local i32 @rtw_write32_mask(%struct.rtw_dev*, i32, i32, i32) #1

declare dso_local i64 @rtw_read_rf(%struct.rtw_dev*, i32, i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
